--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "block-and-ball-table-viewer",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"dependencies": {
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
